# src/swagger.yaml
@@ -130,6 +130,60 @@ paths:
               $ref: "#/definitions/Balance"
         400:
           description: "Invalid status value"
+  /api/auth/login:
+    post:
+      tags:
+      - "auth"
+      summary: ""
+      description: ""
+      parameters:
+      - in: "body"
+        name: "body"
+        description: "The user that needs to login"
+        required: true
+        type: "string"
+        schema:
+          $ref: "#/definitions/UserLogin"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          schema:
+            type: "object"
+            properties:
+              token:
+                type: "string"
+        400:
+          description: "Invalid status value"
+  /api/auth/register:
+    post:
+      tags:
+      - "auth"
+      summary: ""
+      description: ""
+  /api/auth/logout:
+    delete:
+      tags:
+      - "auth"
+      summary: ""
+      description: ""
+      parameters:
+      - name: hookah-jwt
+        in: header
+        description: an authorization header
+        required: true
+        type: string
+      responses:
+        200:
+          schema:
+            type: "object"
+            properties:
+              token:
+                type: "string"
+        400:
+          description: "Invalid status value"
 definitions:
   User:
     type: "object"
@@ -170,3 +224,17 @@ definitions:
         - "credit"
       amount:
         type: "number"
+  UserLogin:
+    type: "object"
+    properties:
+      email:
+        type: "string"
+        description: "TBD"
+      password:
+        type: "string"
+      strategy:
+        type: "string"
+        description: "TBD"
+        enum:
+        - "jwt"
+        - "TBD"
